# theframework

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build.zig  build.zig.zon  flake.nix  pyproject.toml
examples/: greenlet_basics.py  greenlet_echo.py  hello.py  monkey_patch.py  todo_app.py
plans/: MEMORY-ALLOCATION-INDEX.md  arena.md  arena2.md  benchmark.md  design-document.md  granian.md  h2o-mem.md  headers.md  implementation.md  io_uring-multishots.md  memory-allocation-quick-reference.md  memory-allocation-research.md  memory-allocation-visual-guide.md  memory.md  missing.md  monkey.md  names.md  nocopy.md  prefork-improvements.md  prefork-plan.md  prefork.md  resources.md  response-formatting.md  segfault.md  switch-failure.md  unbounded-allocator.md
src/: arena.zig  buffer_recycler.zig  chunk_pool.zig  config.zig  connection.zig  echo_server.zig  echo_server_v2.zig  extension.zig  http.zig  http_response.zig  hub.zig  input_buffer.zig  lazy_request.zig  main.zig  op_slot.zig  py_helpers.c  py_helpers.h  ring.zig  test_input_buffer.zig
stubs/: _framework_core.pyi
tests/: test_concurrent_sleep.py  test_connection_lifecycle.py  test_cooperative_io.py  test_cqe_races_throw.py  test_greenlet_basics.py  test_greenlet_echo.py  test_greenlet_zig.py  test_hard_limits.py  test_http_server.py  test_iouring_echo.py  test_middleware.py  test_monkey_patch.py  test_monkey_phase1.py  test_monkey_phase2.py  test_monkey_phase3.py  test_monkey_phase4.py  test_monkey_phase6.py  test_prefork.py  test_request_response.py  test_response_formatting.py  test_routing.py  (+5 more)
(+15 files in other folders)
