[project]
name = "theframework"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "greenlet>=3.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
warn_return_any = true
disallow_any_explicit = true
disallow_any_generics = true
mypy_path = "stubs"
files = ["theframework/", "tests/"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "types-greenlet>=3.3.0.20251206",
]

[tool.ruff]
line-length = 100
target-version = "py313"
include = ["theframework/**/*.py", "tests/**/*.py", "examples/**/*.py", "stubs/**/*.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
